--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,19 @@ body{
 @media (max-width: 400px){
     #menu ul li{
         margin: 15px;
+        transition: 0.5s;
     }
+}
+
+@media (max-width: 320px){
+    #menu ul li{
+        margin: 0px;
+    }
+}
+
+#content{
+    margin: 10px;
+    text-align: center;
 }
 
 .flex-container-content{
@@ -106,12 +118,33 @@ body{
 .flex-container-content:hover{
     background-color: rgba(51, 97, 158, 0.719);
     color: white;
-    transform:translateX(40px);
     transition: 0.5s;
 }
+
 
 @media (max-width: 700px){
     .flex-container-content{
         flex-flow: column;
     }
+}
+
+
+.main-container{
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+}
+
+.main-container img{
+    width: 100%;
+    opacity: 60%;
+}
+
+#main-text{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: sans-serif;
 }
