--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,13 @@ body{
     font-family: 'Roboto'
 }
 
+/* Clases generals */
+.main-title{ 
+    font-size: 35px;
+    margin: 5px;
+}
+
+/* Menu/Navbar */
 .flex-container-nav{
     display: flex;
     padding: 10px;
@@ -22,6 +29,10 @@ body{
 
 .name img{
     width: 90px;
+}
+
+#menu{
+    font-size: 20px;
 }
 
 #menu ul li{
@@ -45,15 +56,6 @@ body{
     padding: 5px;
 }
 
-#search button{
-    padding: 2px;
-    background-color: rgb(78, 180, 78);
-    color: white;
-    border: none;
-    border-radius: 2px;
-    font-weight: 10px;
-    cursor: pointer;
-}
 
 @media  (max-width: 700px){
     .flex-container-nav{
@@ -69,6 +71,10 @@ body{
         background-color: rgb(194, 194, 194);
     }
 
+    #menu ul li{
+        justify-content: center;
+    }
+
     #menu a{
         color: rgb(70, 70, 70);
     }
@@ -79,6 +85,10 @@ body{
 }
 
 @media (max-width: 400px){
+    #menu{
+        font-size: medium;
+    }
+
     #menu ul li{
         margin: 15px;
         transition: 0.5s;
@@ -87,13 +97,42 @@ body{
 
 @media (max-width: 320px){
     #menu ul li{
+        margin: 10px;
+    }
+}
+
+@media (max-width: 280){
+    #menu ul li{
         margin: 0px;
     }
 }
 
+/* Imagen principal */
+.main-container{
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+}
+
+.main-container img{
+    width: 100%;
+    opacity: 60%;
+}
+
+#main-text{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: sans-serif;
+}
+
+/* Contenido */
 #content{
     margin: 10px;
     text-align: center;
+    font-size: 20px;
 }
 
 .flex-container-content{
@@ -125,26 +164,79 @@ body{
 @media (max-width: 700px){
     .flex-container-content{
         flex-flow: column;
+        margin: 5px;
+        margin-bottom: 40px;
+        font-size: medium;
     }
 }
 
+.flex-container-footer{
+    display: flex;
+    justify-content:space-evenly;
+    flex-flow: row nowrap;
+    padding:10px;
+    padding-top: 20px;
 
-.main-container{
-    position: relative;
-    display: inline-block;
-    text-align: center;
-    width: 100%;
+    background-color: rgb(44, 44, 44);
+    color: white;
 }
 
-.main-container img{
-    width: 100%;
-    opacity: 60%;
+
+#footer-form h3{
+    margin-bottom: 10px;
 }
 
-#main-text{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-family: sans-serif;
+#footer-form input{
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    height: 30px;
+    border-radius: 10px;
+}
+
+#footer-form button{
+    background-color: rgb(117, 170, 38);
+    padding: 0.5em;
+    border: none;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+#footer-form textarea{
+    resize: none;
+    width: 100%;
+    font-family: 'Courier New', Courier, monospace;
+    margin-top: 20px;
+    border-radius: 10px;
+}
+
+#footer-links ul li{
+    list-style: none;
+    margin-bottom: 7px;
+    margin-bottom: 20px;
+}
+
+#footer-links a{
+    text-decoration: none;
+    color: white;
+}
+
+#footer-links i{
+    margin-right: 10px;
+}
+
+@media  (max-width: 700px){
+    .flex-container-footer{
+        flex-flow: column wrap;
+        justify-content: center;
+        text-align: center;
+    }
+
+    #footer-form{
+        margin-bottom: 20px;
+    }
+
+    #footer-links{
+        margin: 0px auto;
+    }
 }
